--- a/platforms/documentation/docs/src/docs/userguide/overview/userguide.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/overview/userguide.adoc
@@ -53,7 +53,7 @@ Want to get up and running with Gradle quickly? Take our free, self-paced Gradle
 
 For software developers that need to build, test, and publish their app, or add dependencies to their build, get started here:
 
-=== 1. Learning the Basics
+=== 1. Learn how to run Gradle Builds
 
 [sidebar]
 _Description_: *Learn how to invoke tasks and add dependencies.* +
@@ -73,7 +73,7 @@ _Training time_: **45 minutes** +
 
 Build engineers that are ready to configure custom build logic or write their own plugins should start here:
 
-=== 1. Beyond the Basics
+=== 1. Learn how to write Gradle scripts
 
 [sidebar]
 _Description_: *Learn to configure builds, create tasks, and apply plugins.* +
@@ -93,7 +93,7 @@ _Training time_: **55 minutes** +
 
 Plugin authors that are ready to develop and publish their own plugins should start here:
 
-=== 1. Deep Dive
+=== 1. Learn how to develop Gradle Plugins
 
 [sidebar]
 _Description_: *Learn to write and publish a plugin.* +
