--- a/platforms/documentation/docs/src/docs/userguide/developing-plugins/introduction/binary_plugin_advanced.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/developing-plugins/introduction/binary_plugin_advanced.adoc
@@ -110,7 +110,7 @@ apply plugin: SamplePlugin
 =====
 ====
 
-== BLAH
+== Developing a Binary Plugin
 
 There are two ways to update the convention plugin in the previous page into a binary plugin.
 
