--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -36,6 +36,15 @@ The previous step will help you identify potential problems by issuing deprecati
 . Run `gradle wrapper --gradle-version {gradleVersion}` to update the project to {gradleVersion}.
 . Try to run the project and debug any errors using the <<troubleshooting.adoc#troubleshooting, Troubleshooting Guide>>.
 
+TODO find the correct place for this
+[[dependency_multi_string_notation]]
+=== Removed APIs
+
+==== Reporting APIs
+
+* `ReportingExtension.file(String)` has been removed. Use `ReportingExtension.getBaseDirectory()` with `file(String)` or `dir(String)` instead.
+* `ReportingExtension.getApiDocTitle()` has been removed. There is no direct replacement for this method.
+
 [[changes_9.1]]
 == Upgrading from 9.0 and earlier
 
@@ -181,7 +190,7 @@ Use `ReportingExtension.getBaseDirectory()` with `file(String)` or `dir(String)`
 [[reporting_extension_api_doc_title]]
 ==== Deprecation of `ReportingExtension.getApiDocTitle()`
 
-The link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#getApiDocTitle()[`getApiDocTitle()` method] on `ReportingExtension` has been deprecated and will be removed in Gradle 10.0.0. 
+The link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#getApiDocTitle()[`getApiDocTitle()` method] on `ReportingExtension` has been deprecated and will be removed in Gradle 10.0.0.
 
 There is no direct replacement for this method.
 
