--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -181,9 +181,14 @@ Use `ReportingExtension.getBaseDirectory()` with `file(String)` or `dir(String)`
 [[reporting_extension_api_doc_title]]
 ==== Deprecation of `ReportingExtension.getApiDocTitle()`
 
-The link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#getApiDocTitle()[`getApiDocTitle()` method] on `ReportingExtension` has been deprecated and will be removed in Gradle 10.0.0. 
+The link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#getApiDocTitle()[`getApiDocTitle()` method] on `ReportingExtension` has been deprecated and will be removed in Gradle 10.0.0.
 
 There is no direct replacement for this method.
+
+[[set-all-jvm-args]]
+==== Deprecation of `JavaForkOptions.setAllJvmArgs()`
+The `JavaForkOptions.setAllJvmArgs()` method has been deprecated and will be removed in Gradle 10.0.0.
+Instead, use the `JavaForkOptions.jvmArgs`, `JavaForkOptions.setJvmArgs`, or provide a `CommandLineArgumentProvider` to add arguments via `JavaForkOptions.getJvmArgumentProviders()`.
 
 [[archives-configuration]]
 ==== Deprecation of the `archives` configuration
