--- a/platforms/documentation/docs/src/docs/userguide/overview/userguide.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/overview/userguide.adoc
@@ -67,11 +67,11 @@ _Reading time_: **25 minutes** +
 _Description_: *Initialize a Gradle build for a basic Java App.* +
 _Training level_: **Beginner** +
 _Training time_: **45 minutes** +
-<<part1_gradle_init#part1_begin,-> Start the Tutorial >>
+<<part1_gradle_init.adoc#part1_begin,-> Start the Tutorial >>
 
 == For Build Engineers
 
-Build engineers that are ready to configure custom build logic or write their own plugins should start here:
+Build engineers that are ready to configure custom build logic should start here:
 
 === 1. Learn how to write Gradle scripts
 
@@ -87,7 +87,7 @@ _Reading time_: **35 minutes** +
 _Description_: *Initialize a Gradle project and create a convention plugin.* +
 _Training level_: **Intermediate** +
 _Training time_: **55 minutes** +
-<<part1_gradle_init_project#part1_begin,-> Start the Tutorial >>
+<<part1_gradle_init_project.adoc#part1_begin,-> Start the Tutorial >>
 
 == For Plugin Developers
 
@@ -100,6 +100,14 @@ _Description_: *Learn to write and publish a plugin.* +
 _Training level_: **Advanced** +
 _Reading time_: **35 minutes** +
 <<plugin_introduction_advanced.adoc#plugin_introduction_advanced,-> Read Advanced Concepts >>
+
+=== 2. Advanced Tutorial
+
+[sidebar]
+_Description_: *Initialize a Gradle project, create a binary plugin, and publish it locally.* +
+_Training level_: **Advanced** +
+_Training time_: **55 minutes** +
+<<part1_gradle_init_plugin.adoc#part1_begin,-> Start the Tutorial >>
 
 == Support
 
